<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/add_by_id_view"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/colorLightGrey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/UID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_textColor="@color/colorBlack"
                    android:hint="@string/type_uid_of_this_device"
                    app:met_clearButton="true"
                    app:met_hideUnderline="true"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="Type UID of this device"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/colorLightGrey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_textColor="@color/colorBlack"
                    android:hint="@string/type_your_account"
                    app:met_clearButton="true"
                    app:met_hideUnderline="true"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="Type your account"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/colorLightGrey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_textColor="@color/colorBlack"
                    android:hint="@string/type_your_password"
                    app:met_clearButton="true"
                    app:met_hideUnderline="true"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="Type your password"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <at.markushi.ui.CircleButton
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="36dip"
                    android:src="@drawable/iconfinder_checkmark_1891021"
                    app:cb_color="#A5D6A7"
                    app:cb_pressedRingWidth="6dip" />

                <at.markushi.ui.CircleButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="36dip"
                    android:src="@drawable/iconfinder_close_1891023"
                    app:cb_color="#E57373"
                    app:cb_pressedRingWidth="6dip" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
